@@ -108,6 +108,11 @@ to the clipboard.</td>
 <table>
 <tbody>
 <tr>
+<td align="center" width="100"><a href="nojs.html" onclick="BR(3411210);return false;">3411210</a></td>
+<td>No longer crashes when unlocking with Subset Password dialog box
+  opened.</td>
+</tr>
+<tr>
 <td align="center" width="100"><a href="nojs.html" onclick="BR(3395549);return false;">3382422</a></td>
 <td>PasswordSafe now displays forms correctly on Netbooks.</td>
 </tr>
